# metricsGPT

./: .dockerignore  .gitignore  Dockerfile  Makefile  Modelfile  README.md  config.yaml  helper.py  metricsGPT.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  lint.yaml
src/metricsGPT/: metricsGPT.py
src/metricsGPT/ui/: package.json
ui/: package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.css  App.tsx
